# amath2

./: CMakeLists.txt  README.md
src/: configuration.cpp  configuration.h  main.cpp  main.h
src/operations/: operator.cpp  operator.h
src/operations/algebra/: arithmetic-sequence-sum.cpp  arithmetic-sequence-sum.h  arithmetic-sequence-term-n.cpp  arithmetic-sequence-term-n.h  base-10-logarithm.cpp  base-10-logarithm.h  binary-logarithm.cpp  binary-logarithm.h  combination.cpp  combination.h  compound-interest.cpp  compound-interest.h  continuous-compound-interest.cpp  continuous-compound-interest.h  cubic.cpp  cubic.h  custom-base-logarithm.cpp  custom-base-logarithm.h  logarithm.cpp  logarithm.h  permutation.cpp  permutation.h  quadratic.cpp  quadratic.h
src/operations/elementary/: addition.cpp  addition.h  division.cpp  division.h  exponentiation.cpp  exponentiation.h  factor.cpp  factor.h  factorial.cpp  factorial.h  gcd.cpp  gcd.h  lcm.cpp  lcm.h  modulus.cpp  modulus.h  multiplication.cpp  multiplication.h  number-factor.cpp  number-factor.h  square-root.cpp  square-root.h  subtraction.cpp  subtraction.h
src/utils/: number-helper.cpp  number-helper.h
